Included buttons to each content editing section.

--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
                                 </tbody>
                               </table>
 
-
                               <!-- button start-->
                               <table class="button">
                                 <tbody>
@@ -212,7 +211,6 @@
                                 </tbody>
                               </table>
                               <!-- button end-->
-
 
                             </th>
                           </tr>
@@ -260,6 +258,33 @@
                                   </tr>
                                 </tbody>
                               </table>
+
+                              <!-- button start-->
+                              <table class="button">
+                                <tbody>
+                                  <tr >
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                  <tr>
+                                    <td>
+                                      <table>  
+                                        <tbody>
+                                          <tr>
+                                            <td mc:edit="Two column image right with text left, left button" >
+                                              <a href="#"  class="button-link">READ MORE</a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              <!-- button end-->
+
                             </th>
                             <th class="small-6 large-6 columns last">
                               <table class="spacer">
@@ -332,6 +357,32 @@
                                   </tr>
                                 </tbody>
                               </table>
+
+                              <!-- button start-->
+                              <table class="button">
+                                <tbody>
+                                  <tr >
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                  <tr>
+                                    <td>
+                                      <table>  
+                                        <tbody>
+                                          <tr>
+                                            <td mc:edit="Two column image left with text right, right button" >
+                                              <a href="#"  class="button-link">READ MORE</a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                    <tr>
+                                      <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              <!-- button end-->
                             </th>
                           </tr>
                         </tbody>
@@ -364,6 +415,33 @@
                                     </tr>
                                   </tbody>
                                 </table>
+
+                                <!-- button start-->
+                                <table class="button">
+                                  <tbody>
+                                    <tr >
+                                      <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                    </tr>
+                                    <tr>
+                                      <td>
+                                        <table>  
+                                          <tbody>
+                                            <tr>
+                                              <td mc:edit="Left column with text button" >
+                                                <a href="#"  class="button-link">READ MORE</a>
+                                              </td>
+                                            </tr>
+                                          </tbody>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                                <!-- button end-->
+
                               </th>
                               <th class="small-6 large-6 columns last">
                                 <table class="spacer">
@@ -386,6 +464,33 @@
                                   </tr>
                                 </tbody>
                               </table>
+
+                              <!-- button start-->
+                              <table class="button">
+                                <tbody>
+                                  <tr >
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                  <tr>
+                                    <td>
+                                      <table>  
+                                        <tbody>
+                                          <tr>
+                                            <td mc:edit="Right column with text button" >
+                                              <a href="#"  class="button-link">READ MORE</a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              <!-- button end-->
+
                             </th>
                           </tr>
                         </tbody>
@@ -473,7 +578,7 @@
                                     </tr>
                                   </tbody>
                                 </table>
-                              <table>
+                                <table>
                                   <tbody>
                                     <tr>
                                       <td>
@@ -486,6 +591,33 @@
                                   </tr>
                                 </tbody>
                               </table>
+
+                              <!-- button start-->
+                              <table class="button">
+                                <tbody>
+                                  <tr >
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                  <tr>
+                                    <td>
+                                      <table>  
+                                        <tbody>
+                                          <tr>
+                                            <td mc:edit="Left column image with text button" >
+                                              <a href="#"  class="button-link">READ MORE</a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              <!-- button end-->
+
                             </th>
                             <th class="small-6 large-6 columns last">
                                 <table class="spacer">
@@ -507,25 +639,51 @@
                                   </tbody>
                               </table>
                               <table class="spacer">
-                                  <tbody>
-                                    <tr>
-                                      <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
-                                    </tr>
-                                  </tbody>
-                                </table>
+                                <tbody>
+                                  <tr>
+                                    <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+                                  </tr>
+                                </tbody>
+                              </table>
                               <table>
-                                  <tbody>
-                                    <tr>
-                                      <td>
-                                        <div class="editable-content"> 
-                                          <h6 class="heading-brand"><multiline label="Content heading">Left and Right text repeater</multiline></h6>
-                                          <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
-                                          <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
-                                        </div>
+                                <tbody>
+                                  <tr>
+                                    <td>
+                                      <div class="editable-content"> 
+                                        <h6 class="heading-brand"><multiline label="Content heading">Left and Right text repeater</multiline></h6>
+                                        <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                        <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                      </div>
                                     </td>
                                   </tr>
                                 </tbody>
                               </table>
+
+                              <!-- button start-->
+                              <table class="button">
+                                <tbody>
+                                  <tr >
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                  <tr>
+                                    <td>
+                                      <table>  
+                                        <tbody>
+                                          <tr>
+                                            <td mc:edit="Right column image with text button" >
+                                              <a href="#"  class="button-link">READ MORE</a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td align="left" valign="top" width="100%" height="8" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 8px;"><!--[if gte mso 8]>&nbsp;<![endif]--></td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              <!-- button end-->
                             </th>
                           </tr>
                         </tbody>
