--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                       <a href="*|FACEBOOK:LIKE:URL|*">
                                         <img  mc:edit="FB icon" src="http://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Facebook icon." style="padding-left: 0!important;"/>
                                       </a>
-                                      <a href="*|TWITTER:FULLPROFILE|*">
+                                      <a href="*|TWITTER:PROFILEURL|*">
                                         <img mc:edit="Twitter icon" src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
                                       </a>
                                       <a href="*|FORWARD|*">
@@ -809,6 +809,182 @@
             </tr>
           </table>
            <!-- Three columns image repeater end -->
+
+
+  <!-- Three columns image and text repeater start -->
+  <table mc:repeatable="content" mc:variant="three_column_images_text_with_btns">
+    <tr>
+      <td> 
+          <table class="row three-column-content">
+            <tbody>
+              <tr>
+                <th class="small-4 large-4 columns first">
+             <!--        <table class="spacer">
+                        <tbody>
+                          <tr>
+                            <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+                          </tr>
+                        </tbody>
+                      </table> -->
+                  <table>
+                    <tbody>
+                      <tr>
+                        <th>
+                          <center data-parsed=""> 
+                            <img mc:edit="Three columns image text with button, left." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                          </center>
+                        </th>
+                      </tr>
+                      <tr>
+                        <td>
+                            <table class="spacer">
+                                <tbody>
+                                  <tr>
+                                    <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="editable-content"> 
+                            <p mc:edit="Three column image text with button left paragraph.">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                          </div>                                
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td>
+                          <table class="blick-btn" border="0" cellpadding="0" cellspacing="0" width="100%">
+                            <tr>
+                              <td align="center" valign="middle" mc:edit="Three column image text with button left.">
+                                <a href="http://www.mailchimp.com/blog/" target="_blank">read more</a>
+                              </td>
+                            </tr>
+                          </table>                              
+                        </td>
+                      </tr>
+
+                  </tbody>
+                </table>
+              </th>
+              <th class="small-4 large-4 columns ">
+             <!--      <table class="spacer">
+                      <tbody>
+                        <tr>
+                          <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+                        </tr>
+                      </tbody>
+                    </table> -->
+                  <table>
+                    <tbody>
+                      <tr>
+                        <th>
+                          <center data-parsed=""> 
+                            <img mc:edit="Three columns image text with button, center." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                          </center>
+                        </th>
+                      </tr>
+                      <tr>
+                        <td>
+                          <table class="spacer">
+                              <tbody>
+                                <tr>
+                                  <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+                                </tr>
+                              </tbody>
+                            </table>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="editable-content"> 
+                            <p mc:edit="Three column image text with button center paragraph.">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                          </div>                                
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td>
+                          <table class="blick-btn" border="0" cellpadding="0" cellspacing="0" width="100%">
+                            <tr>
+                              <td align="center" valign="middle" mc:edit="Three column image text with button center.">
+                                <a href="http://www.mailchimp.com/blog/" target="_blank">read more</a>
+                              </td>
+                            </tr>
+                          </table>                              
+                        </td>
+                      </tr>
+
+
+                  </tbody>
+                </table>
+              </th>
+              <th class="small-4 large-4 columns last">
+            <!--       <table class="spacer">
+                      <tbody>
+                        <tr>
+                          <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+                        </tr>
+                      </tbody>
+                    </table> -->
+                  <table>
+                    <tbody>
+                      <tr>
+                        <th>
+                          <center data-parsed=""> 
+                            <img mc:edit="Three columns image text with button, right." src="http://placehold.it/172x100" width="172" align="center" class="float-center" style="max-width:172px;"> 
+                          </center>
+                        </th>
+                      </tr>
+                      <tr>
+                        <td>
+                          <table class="spacer">
+                              <tbody>
+                                <tr>
+                                  <td align="left" valign="top" width="100%" height="16" style="border-collapse:collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; mso-line-height-rule: exactly; line-height: 16px;"></td>
+                                </tr>
+                              </tbody>
+                            </table>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="editable-content"> 
+                            <p mc:edit="Three column image text with button right paragraph.">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                          </div>                                
+                        </td>
+                      </tr>
+
+
+                      <tr>
+                        <td>
+                          <table class="blick-btn" border="0" cellpadding="0" cellspacing="0" width="100%">
+                            <tr>
+                              <td align="center" valign="middle" mc:edit="Three column image text with button right.">
+                                <a href="http://www.mailchimp.com/blog/" target="_blank">read more</a>
+                              </td>
+                            </tr>
+                          </table>                              
+                        </td>
+                      </tr>
+
+
+                  </tbody>
+                </table>
+              </th>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+    </tr>
+  </table>
+   <!-- Three columns image repeater end -->
+
+
+
+
           <!-- footer bar start -->
           <table class="row" id="footer-bar">
             <tbody>
