--- a/index_w_btn_v2.html
+++ b/index_w_btn_v2.html
@@ -57,7 +57,7 @@
                                       <a href="*|FACEBOOK:LIKE:URL|*">
                                         <img  mc:edit="FB icon" src="http://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Facebook icon." style="padding-left: 0!important;"/>
                                       </a>
-                                      <a href="*|TWITTER:FULLPROFILE|*">
+                                      <a href="*|TWITTER:PROFILEURL|*">
                                         <img mc:edit="Twitter icon" src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
                                       </a>
                                       <a href="*|FORWARD|*">
@@ -826,32 +826,19 @@
                                 </td>
                               </tr>
                               <!-- button start -->
-                              <tr>
+                            <tr>
                                 <td>
-                                  <table class="button">
-                                    <tbody>
-                                      <tr style="padding:0;text-align:left;vertical-align:top;">
-                                        <td align="left" valign="top" width="100%" height="8" style="-webkit-hyphens:auto;margin:0;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:8px;mso-line-height-rule:exactly;mso-table-lspace:0;mso-table-rspace:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word;"></td>
-                                      </tr>
-                                      <tr style="padding:0;text-align:left;vertical-align:top;">
-                                        <td style="-webkit-hyphens:auto;margin:0;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:18px;font-weight:300;line-height:1.3;padding:0;text-align:left;vertical-align:top;word-wrap:break-word;">
-                                          <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%;">
-                                            <tbody>
-                                              <tr style="padding:0;text-align:left;vertical-align:top;">
-                                                <td style="-webkit-hyphens:auto;margin:0;background:#FFF;border:none;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:18px;font-weight:300;line-height:1.3;padding:0;text-align:center;vertical-align:top;word-wrap:break-word;" mc:edit="two column text with image left button"><a style="margin:0;border:0 solid #fff;border-radius:3px;display:inline-block;font-family:Helvetica, Arial, sans-serif;font-size:18px;line-height:1.3;padding:8px 25px 8px 25px;text-align:left;text-decoration:none;">read more</a>
+                                    <table class="blick-btn" border="0" cellpadding="0" cellspacing="0" width="100%">
+                                        <tbody>
+                                            <tr>
+                                                <td align="center" valign="middle" mc:edit="three column image text with button left.">
+                                                <a href="http://www.mailchimp.com/blog/" target="_blank">read more</a>
                                                 </td>
-                                              </tr>
-                                            </tbody>
-                                          </table>
-                                        </td>
-                                      </tr>
-                                      <tr style="padding:0;text-align:left;vertical-align:top;">
-                                        <td align="left" valign="top" width="100%" height="8" style="-webkit-hyphens:auto;margin:0;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:8px;mso-line-height-rule:exactly;mso-table-lspace:0;mso-table-rspace:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word;"></td>
-                                      </tr>
-                                    </tbody>
-                                  </table>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </td>
-                              </tr>
+                            </tr>
                               <!-- button end -->
                           </tbody>
                         </table>
@@ -887,30 +874,17 @@
                               <!-- button start -->
                               <tr>
                                 <td>
-                                  <table class="button">
-                                    <tbody>
-                                      <tr style="padding:0;text-align:left;vertical-align:top;">
-                                        <td align="left" valign="top" width="100%" height="8" style="-webkit-hyphens:auto;margin:0;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:8px;mso-line-height-rule:exactly;mso-table-lspace:0;mso-table-rspace:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word;"></td>
-                                      </tr>
-                                      <tr style="padding:0;text-align:left;vertical-align:top;">
-                                        <td style="-webkit-hyphens:auto;margin:0;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:18px;font-weight:300;line-height:1.3;padding:0;text-align:left;vertical-align:top;word-wrap:break-word;">
-                                          <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%;">
-                                            <tbody>
-                                              <tr style="padding:0;text-align:left;vertical-align:top;">
-                                                <td style="-webkit-hyphens:auto;margin:0;background:#FFF;border:none;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:18px;font-weight:300;line-height:1.3;padding:0;text-align:center;vertical-align:top;word-wrap:break-word;" mc:edit="two column text with image middle button"><a style="margin:0;border:0 solid #fff;border-radius:3px;display:inline-block;font-family:Helvetica, Arial, sans-serif;font-size:18px;line-height:1.3;padding:8px 25px 8px 25px;text-align:left;text-decoration:none;">read more</a>
-                                              </td>
-                                            </tr>
-                                          </tbody>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                    <tr style="padding:0;text-align:left;vertical-align:top;">
-                                      <td align="left" valign="top" width="100%" height="8" style="-webkit-hyphens:auto;margin:0;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:8px;mso-line-height-rule:exactly;mso-table-lspace:0;mso-table-rspace:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word;"></td>
-                                    </tr>
-                                  </tbody>
-                                </table>
+                                    <table class="blick-btn" border="0" cellpadding="0" cellspacing="0" width="100%">
+                                        <tbody>
+                                        <tr>
+                                            <td align="center" valign="middle" mc:edit="three column image text with button middle.">
+                                            <a href="http://www.mailchimp.com/blog/" target="_blank">read more</a>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
                                 </td>
-                              </tr>
+                            </tr>
                               <!-- button end -->
                           </tbody>
                         </table>
@@ -945,32 +919,19 @@
                               </tr>
 
                               <!-- button start -->
-                              <tr>
+                            <tr>
                                 <td>
-                                  <table class="button">
-                                    <tbody>
-                                      <tr style="padding:0;text-align:left;vertical-align:top;">
-                                        <td align="left" valign="top" width="100%" height="8" style="-webkit-hyphens:auto;margin:0;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:8px;mso-line-height-rule:exactly;mso-table-lspace:0;mso-table-rspace:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word;"></td>
-                                      </tr>
-                                      <tr style="padding:0;text-align:left;vertical-align:top;">
-                                        <td style="-webkit-hyphens:auto;margin:0;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:18px;font-weight:300;line-height:1.3;padding:0;text-align:left;vertical-align:top;word-wrap:break-word;">
-                                          <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%;">
-                                            <tbody>
-                                              <tr style="padding:0;text-align:left;vertical-align:top;">
-                                                <td style="-webkit-hyphens:auto;margin:0;background:#FFF;border:none;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:18px;font-weight:300;line-height:1.3;padding:0;text-align:center;vertical-align:top;word-wrap:break-word;" mc:edit="two column text with image right button"><a style="margin:0;border:0 solid #fff;border-radius:3px;display:inline-block;font-family:Helvetica, Arial, sans-serif;font-size:18px;line-height:1.3;padding:8px 25px 8px 25px;text-align:left;text-decoration:none;">read more</a>
-                                              </td>
+                                    <table class="blick-btn" border="0" cellpadding="0" cellspacing="0" width="100%">
+                                        <tbody>
+                                            <tr>
+                                                <td align="center" valign="middle" mc:edit="three column image text with button right.">
+                                                <a href="http://www.mailchimp.com/blog/" target="_blank">read more</a>
+                                                </td>
                                             </tr>
-                                          </tbody>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                    <tr style="padding:0;text-align:left;vertical-align:top;">
-                                      <td align="left" valign="top" width="100%" height="8" style="-webkit-hyphens:auto;margin:0;border-collapse:collapse !important;font-family:Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:8px;mso-line-height-rule:exactly;mso-table-lspace:0;mso-table-rspace:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word;"></td>
-                                    </tr>
-                                  </tbody>
-                                </table>
+                                        </tbody>
+                                    </table>
                                 </td>
-                              </tr>
+                            </tr>
                               <!-- button end -->
 
                           </tbody>
