Improved instructions and styles for btn.

--- a/index_w_btn_v2.html
+++ b/index_w_btn_v2.html
@@ -1017,5 +1017,5 @@
 </html>
 <!-- REMINDER:
   After compiling custom css and inlining with foundation: https://foundation.zurb.com/emails/inliner-v2.html
-  inclide the custom styles in the head of the template file so they are applied when content is edited in Mailchimp.
+ include the custom compiled styles in the header before adding it to mail chimp template editing area. If an editable items content is changed, the styles for that item will be removed. This is why we also need to include the custom styles in the head.
 -->
